--- a/html/.env.example
+++ b/html/.env.example
@@ -25,7 +25,7 @@ DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=intranet
-DB_USERNAME=root
+DB_USERNAME=your_user
 DB_PASSWORD=123456
 
 SESSION_DRIVER=database
